2001-05-11  Fernando Nasser  <fnasser@redhat.com>

	* ser-unix.c (rate_to_code): Issue warning if baud rate is invalid.
	(hardwire_setbaudrate): Set errno to EINVAL and return with error
	if the conversion of the baud rate to code fails.

2001-05-10  Andrew Cagney  <ac131313@redhat.com>

	* ui-out.h (make_cleanup_ui_out_begin_end): Declare.
	* ui-out.c (struct ui_out_end_cleanup_data): Define.
	(do_cleanup_end): New function.  Replace do_list_end.
	(make_cleanup_ui_out_end): New function.
	(make_cleanup_ui_out_begin_end): New function.
	(make_cleanup_ui_out_list_end): Use make_cleanup_ui_out_end.

2001-05-10  Elena Zannoni  <ezannoni@redhat.com>

        * MAINTAINERS: Declare xcoffread.c open to all maintainers,
        and make Kevin Buettner (kevinb@redhat.com) the reference person.

2001-05-10  Elena Zannoni  <ezannoni@redhat.com>

	* proc-api.c (ioctl_with_trace): Fix uninitialized variable.

2001-05-10  Fernando Nasser  <fnasser@redhat.com>

	* MAINTAINERS: Add testsuite subdirectory co-maintainers.

Thu May 10 16:26:47 2001  Andrew Cagney  <cagney@b1.cygnus.com>

	* Makefile.in (mi-main.o): Compile with -Werror.

2001-05-10  Michael Snyder  <msnyder@redhat.com>

	* remote.c (remote_open_1): Call no_shared_libraries, so that
	symbols for shared libraries can be reloaded per session.
	(remote_async_open_1): Ditto.
	* remote.c (bin2hex, hex2bin): New functions.  Factor out these
	two conversions which are coded for repeatedly in this module.
	(remote_threads_extra_info, remote_wait, remote_async_wait, 
	store_register_using_P, remote_store_registers, remote_write_bytes,
	remote_read_bytes, remote_rcmd): Use bin2hex and hex2bin instead
	of coding the conversions inline.
	(fromhex): Not exported, change from extern to static.

2001-05-10  Andrew Cagney  <ac131313@redhat.com>

	* arch-utils.c (initialize_current_architecture): Delete obsolete
	``info architecture'' command.
	(info_architecture): Delete function.

2001-05-10  Andrew Cagney  <ac131313@redhat.com>
